--- a/index.html
+++ b/index.html
@@ -439,7 +439,8 @@
 
             section.classList.remove('d-none');
             container.classList.add('d-none');
-           
+           num = 0;
+            numtag.textContent = '0';
 
             event.preventDefault();
             event.stopPropagation();
